@startuml Ciphers
skinparam backgroundcolor transparent
skinparam classAttributeIconSize 0

interface ICipherInterface {
    + Encrypt(original : string) : string
    + Decrypt(encrypted : string) : string
}

abstract class AbstractCipher
{
    Alphabet : char[] = [ 'a', 'A', 'b', 'B', 'c', 'C', 'd', 'D', 'e', 'E', 'f', 'F'
            , 'g', 'G', 'h', 'H', 'i', 'I', 'j', 'J', 'k', 'K', 'l', 'L', 'm', 'M'
            , 'n', 'N', 'o', 'O', 'p', 'P', 'q', 'Q', 'r', 'R', 's', 'S', 't', 'T'
            , 'u', 'U', 'v', 'V', 'w', 'W', 'x', 'X', 'y', 'Y', 'z', 'Z' ]
    # FindCharIndex(ch : char) : int
}

class AtbashCipher
{
    + Encrypt(original : string) : string
    + Decrypt(encrypted : string) : string
}

class CaesarCipher
{
    - _rotFactor : int
    + CaesarCipher(_rotFactor : int)
    + Encrypt(original : string) : string
    + Decrypt(encrypted : string) : string
}

ICipherInterface <|-- AbstractCipher
AbstractCipher <|-- AtbashCipher
AbstractCipher <|-- CaesarCipher
@enduml